<resources>
    <string name="app_name">DecryptionStranger</string>

    <string name="all_rights_reserved">Copyright © 2015-2016 way. All Rights Reserved.</string>
    <string name="setting_about_description">解密-陌生人</string>
    <string name="et_account_hint">账号</string>
    <string name="et_password_hint">密码</string>
    <string name="login">登陆</string>
    <string name="register">新用户</string>
    <string name="forget_password">忘记密码?</string>
    <string name="tv_tips_name">请填写你的账号</string>
    <string name="tv_tips_password">请填写你的密码</string>
    <string name="et_name_hint">账号</string>
    <string name="btn_next">下一步</string>
    <string name="register_setPhoto">设置一下头像吧！</string>
    <string name="register_complete">完成</string>
    <string name="status_available">在线</string>
    <string name="status_away">离开</string>
    <string name="status_chat">Q我吧</string>
    <string name="status_dnd">请勿打扰</string>
    <string name="status_xa">隐身</string>
    <string name="status_offline">离线</string>
    <string name="status_busy">忙碌</string>
    <string name="status_online">在线</string>
    <string name="run_bg_ticker">解密陌生人正在后台运行</string>
    <string name="request_failed">登录失败:</string>
    <string name="timeout_try_again">网络连接超时，请重试</string>
    <string name="auto_save_password">记住密码</string>
    <string name="hide_login">隐身登录</string>
    <string name="new_group_name">新建分组</string>
    <string name="user_name">User Name</string>
    <string name="user_sign">User Sign</string>
    <string name="default_member_number">0</string>
    <string name="delete_user">删除好友</string>
    <string name="add_new_user">添加好友</string>
    <string name="add_new_group">添加分组</string>
    <string name="delete_group">删除分组</string>
    <string name="manage_group">管理分组</string>
    <string name="nick_name">昵称</string>
    <string name="user_sex">性别</string>
    <string name="contact_menu">联系人</string>
    <string name="net_error_tip">未连接...</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="status_qme">Q我吧</string>

    <string name="status_ys">隐身</string>
    <string name="net_error">网络未连接</string>
    <string name="rename">重命名</string>
    <string name="add_friend">加好友</string>
    <string name="group_rename_failed">默认分组不能重命名</string>
    <string name="login_prompt">登录中</string>
    <string name="rename_group_title">重命名分组</string>
    <string name="rename_group_template">将分组%s重命名为:</string>
    <string name="addContact_spinnerPrompt">选择分组</string>
    <string name="newGroup_editTextField_hint">新分组名称</string>
    <string name="addrosteritemaddgroupchoice">增加新分组</string>
    <string name="default_group">我的好友</string>
    <string name="add_friend_title">请输入对方账号,备注名并选择分组</string>
    <string name="account_number_hint">user@example.com</string>
    <string name="nickname_hint">备注</string>
    <string name="add_friend_dialog_title">添加好友</string>
    <string name="open">打开</string>
    <string name="move">移动到</string>
    <string name="delete">删除</string>
    <string name="error_input">非法输入</string>
    <string name="deleteUser_title">删除好友</string>
    <string name="deleteUser_message">确定删除%1$s(%2$s)?</string>
    <string name="press_again_backrun">再按一次返回桌面</string>
    <string name="MoveRosterEntryToGroupDialog_summ">是否移动</string>
    <string name="icon_menu_home">好友</string>
    <string name="icon_menu_chat">最近会话</string>
    <string name="icon_menu_setting">设置</string>
    <string name="hello_world">helloworld</string>
    <string name="action_settings">Settings</string>
    <string name="icon_menu_search">搜索好友</string>
    <string name="icon_menu_new_group">新建分组</string>
    <string name="icon_menu_shack">摇一摇</string>
    <string name="icon_menu_love">缘分墙</string>
    <string name="icon_menu_exit">退出</string>
    <string name="male_string">男</string>
    <string name="female_string">女</string>

    <string name="make_friend">添加为好友</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_prefix">[我的位置]</string>

    <string name="voice">[语音]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>


    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>

    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>

    <string name="network_isnot_available">网络不可用</string>

    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <!-- 消除警告，可忽略 -->
    <string name="d">图片描述</string>

</resources>
